@@ -38,8 +38,6 @@ Implemente_instanciable_sans_constructeur(Fluide_Weakly_Compressible,"Fluide_Wea
 // XD attr loi_etat loi_etat_base loi_etat 1 The state law that will be associated to the Weakly-compressible fluid.
 // XD attr sutherland bloc_sutherland sutherland 1 Sutherland law for viscosity and for conductivity.
 // XD attr traitement_pth chaine(into=["constant"]) traitement_pth 1 Particular treatment for the thermodynamic pressure Pth ; there is currently one possibility: NL2 1) the keyword \'constant\' makes it possible to have a constant Pth but not uniform in space ; it\'s the good choice when the flow is open (e.g. with pressure boundary conditions).
-// XD attr beta_th suppress_param beta_th 1 suppress
-// XD attr beta_co suppress_param beta_co 1 suppress
 // XD attr lambda field_base lambda_u 1 Conductivity (W.m-1.K-1).
 // XD attr mu field_base mu 1 Dynamic viscosity (kg.m-1.s-1).
 
