@@ -2117,9 +2117,9 @@
 </tr>
 <tr valign=top>
 <td WIDTH=40%><FONT Size=-1><b>Trianguler_fin</b></FONT></td>
+<td WIDTH=20%><FONT Size=-2><A HREF=../References.html#WC_Chaleur_VEF TARGET=p>WC_Chaleur_VEF</A></FONT></td>
 <td WIDTH=20%><FONT Size=-2><A HREF=../References.html#QCRhoT_constante TARGET=p>QCRhoT_constante</A></FONT></td>
 <td WIDTH=20%><FONT Size=-2><A HREF=../References.html#Canal_incline_VEF TARGET=p>Canal_incline_VEF</A></FONT></td>
-<td WIDTH=20%><FONT Size=-2><A HREF=../References.html#Canal_perio_VEF_2D TARGET=p>Canal_perio_VEF_2D</A></FONT></td>
 </tr>
 <tr valign=top>
 <td WIDTH=40%><FONT Size=-1><b>Trianguler_h</b></FONT></td>
