@@ -441,6 +441,7 @@
 <TR><TD><SMALL><A HREF="#Verif_Duplic_ICoCo">Verif_Duplic_ICoCo</A></TD><TD><SMALL># Test of last time step post-processing #</TD></TR>
 <TR><TD><SMALL><A HREF="#VerifierCoin">VerifierCoin</A></TD><TD><SMALL># Thermohydraulique VEF 2D couplee a conduction 2D #</TD></TR>
 <TR><TD><SMALL><A HREF="#WC_Chaleur_VDF">WC_Chaleur_VDF</A></TD><TD><SMALL># ThermoHydraulique_WC 2D : weakly compressible gaz parfait VDF #</TD></TR>
+<TR><TD><SMALL><A HREF="#WC_Chaleur_VEF">WC_Chaleur_VEF</A></TD><TD><SMALL># ThermoHydraulique_WC 2D : weakly compressible gaz parfait VDF #</TD></TR>
 <TR><TD><SMALL><A HREF="#WC_multi_2_3_espece">WC_multi_2_3_espece</A></TD><TD><SMALL># Pb_ThermoHydraulique_Especes_WC 3D GAZ PEMFC #</TD></TR>
 <TR><TD><SMALL><A HREF="#centre4_VDF">centre4_VDF</A></TD><TD><SMALL># Hydraulique 2D : plaque boundary layer #</TD></TR>
 <TR><TD><SMALL><A HREF="#centre4_VDF_periodique">centre4_VDF_periodique</A></TD><TD><SMALL># Hydraulique 2D : plaque boundary layer parallele #</TD></TR>
@@ -2335,6 +2336,10 @@
 <CENTER># ThermoHydraulique_WC 2D : weakly compressible gaz parfait VDF #</CENTER>
 <CENTER><img src=rien.gif></CENTER>
 <CENTER><a href=../tests/Reference/WC_Chaleur_VDF/WC_Chaleur_VDF.data>Edit</a> WC_Chaleur_VDF.data </CENTER>
+<HR><CENTER><B><A NAME=WC_Chaleur_VEF>WC_Chaleur_VEF</A></B></CENTER>
+<CENTER># ThermoHydraulique_WC 2D : weakly compressible gaz parfait VDF #</CENTER>
+<CENTER><img src=rien.gif></CENTER>
+<CENTER><a href=../tests/Reference/WC_Chaleur_VEF/WC_Chaleur_VEF.data>Edit</a> WC_Chaleur_VEF.data </CENTER>
 <HR><CENTER><B><A NAME=WC_multi_2_3_espece>WC_multi_2_3_espece</A></B></CENTER>
 <CENTER># Pb_ThermoHydraulique_Especes_WC 3D GAZ PEMFC #</CENTER>
 <CENTER><img src=rien.gif></CENTER>
